--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
 		"globals": "^16.0.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
-		"svelte": "^5.0.0",
+		"svelte": "^5.38.10",
 		"svelte-check": "^4.0.0",
+		"tippy.js": "^6.3.7",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^7.0.4"
