--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,12 @@
 	"singleQuote": true,
 	"trailingComma": "none",
 	"printWidth": 100,
-	"plugins": ["prettier-plugin-svelte"],
+	"plugins": [
+		"prettier-plugin-svelte",
+		"prettier-plugin-css-order",
+		"@trivago/prettier-plugin-sort-imports"
+	],
+	"importOrder": ["<THIRD_PARTY_MODULES>", "^\\$(.*)$", "^[./]"],
 	"overrides": [
 		{
 			"files": "*.svelte",
