--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
 		"@sveltejs/adapter-static": "^3.0.9",
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
+		"@trivago/prettier-plugin-sort-imports": "^5.2.2",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
 		"globals": "^16.0.0",
 		"prettier": "^3.4.2",
+		"prettier-plugin-css-order": "^2.1.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"svelte": "^5.38.10",
 		"svelte-check": "^4.0.0",
