--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"prettier": "^3.4.2",
 		"prettier-plugin-css-order": "^2.1.2",
 		"prettier-plugin-svelte": "^3.3.3",
+		"runed": "^0.31.1",
 		"svelte": "^5.38.10",
 		"svelte-check": "^4.0.0",
 		"tippy.js": "^6.3.7",
